--- a/application/index/view/admin/term.html
+++ b/application/index/view/admin/term.html
@@ -90,7 +90,7 @@
                         <th>当前周次</th>
                         <th>操作</th>
                     </tr>
-                    {volist name="Term" id="Term" $key="key"}
+                    {volist name="Term" id="Term" key="key"}
                     <tr>
                         <td>{$key}</td>
                         <td>{$Term->getdata('name')}</td>
