--- a/application/index/view/admin/termadd.html
+++ b/application/index/view/admin/termadd.html
@@ -20,7 +20,7 @@
         <div class="page-header">
             <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
         </div>
-        <form class="form-horizontal" action="terminsert" method="post">
+        <form class="form-horizontal" action="termsave" method="post">
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">学期名称:</label>
                 <div class="col-sm-10">
