--- a/application/index/view/student/password.html
+++ b/application/index/view/student/password.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
 <head>
     <meta charset="UTF-8">
     <title>{block name="title"}修改密码-微课堂{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/microcourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
 <body class="container">
@@ -34,7 +34,7 @@
 	
 	<div class="text-center">
 		<br>	
-		<a href="http://localhost/microCourse/public/index.php/index/home/studentpage"  type="button" class="btn btn-primary"> 提交  </a>
+		<a href="http://localhost/microcourse/public/index.php/index/student/page"  type="button" class="btn btn-primary"> 提交  </a>
 	</div>
 </body>
 </html>
