--- a/application/index/view/admin/teacher.html
+++ b/application/index/view/admin/teacher.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{block name="title"}微课堂-管理员模式{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/microcourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
 
@@ -26,17 +26,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://localhost/microCourse/public/index.php/index/home/adminpage">微课堂</a>
+                <a class="navbar-brand" href="http://localhost/microcourse/public/index.php/index/admin/page">微课堂</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav ">
-                    <li><a href="http://localhost/microCourse/public/index.php/index/home/adminpage">首页</a></li>
-                    <li><a href="http://localhost/microCourse/public/index.php/index/home/adminterm">学期控制</a></li>
+                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/page">首页</a></li>
+                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/term">学期控制</a></li>
                     <!-- 这个标签是当前标签 -->
-                    <li class="active"><a href="http://localhost/microCourse/public/index.php/index/home/adminteacher">教师管理<span class="sr-only">(curent)</span></a></li>
-                    <li><a href="http://localhost/microCourse/public/index.php/index/home/adminstudent">学生管理</a></li>
-                    <li><a href="http://localhost/microCourse/public/index.php/index/home/adminclassroom">教室管理</a></li>
+                    <li class="active"><a href="http://localhost/microcourse/public/index.php/index/admin/teacher">教师管理<span class="sr-only">(curent)</span></a></li>
+                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/student">学生管理</a></li>
+                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/classroom">教室管理</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
