--- a/application/index/view/teacher/course.html
+++ b/application/index/view/teacher/course.html
@@ -30,14 +30,16 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav ">
-            	<li><a href="http://localhost/microCourse/public/index.php/index/home/teacherpage">首页</a></li>
-              <li><a href="http://localhost/microCourse/public/index.php/index/home/teachercourse">课程管理</a></li>
-              <li><a href="http://localhost/microCourse/public/index.php/index/home/teacherclassroom">教室管理</a></li>
-              <li><a href="http://localhost/microCourse/public/index.php/index/home/teacheronline">上课模式</a></li>
-              <li class="active"><a href="http://localhost/microCourse/public/index.php/index/home/teachergrade">成绩录入<span class="sr-only">(current)</span></a></li>
+            	<li><a href="http://localhost/microcourse/public/index.php/index/teacher/page">首页</a></li>
+              <li class="active"><a href="http://localhost/microcourse/public/index.php/index/teacher/course">课程管理 <span class="sr-only">(current)</span></a></li>
               <!--是这个标签是当前标签 -->
+              <li><a href="http://localhost/microcourse/public/index.php/index/teacher/classroom">教室管理</a></li>
+              <li><a href="http://localhost/microcourse/public/index.php/index/teacher/online">上课模式</a></li>
+              <li><a href="http://localhost/microcourse/public/index.php/index/teacher/grade">成绩录入</a></li>
+              
             </ul>
             <ul class="nav navbar-nav navbar-right">
+              
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">你好，敬爱的教师<span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -58,19 +60,36 @@
               
               <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
               <h3>学期名:</h3>
+            <hr />
+                <div class="row">
+                  <div class="col-md-8">
+                    <form class="form-inline">
+                      <div class="form-group">
+                        <label class="sr-only" for="name">姓名</label>
+                        <input type="name" name="text" class="form-control" placeholder="名称..." value="{:input('ge.name')}">
+                      </div>
+                      <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;查询</button>
+                    </form>
+                  </div>
+                  <div class="col-md-4 text-right">
+                      <a href="http://localhost/microcourse/public/index.php/index/teacher/courseedit" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a>
+                    </div>
+                </div>
+                
+                <hr />
               <table>
                 <tr>
-                  <th><h4>选择课程:&nbsp&nbsp</h4></th>
-                  <td>
+                  <th><h4>选择周次:&nbsp&nbsp</h4></th>
+                <td>
                     <div class="dropdown">
                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  语文
+                  第一周
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#">语文</a></li>
-                  <li><a href="#">数学</a></li>
-                  <li><a href="#">英语</a></li>
+                  <li><a href="#">第一周</a></li>
+                  <li><a href="#">第二周</a></li>
+                  <li><a href="#">第三周</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="#">......</a></li>
                 </ul>
@@ -80,28 +99,37 @@
               </table>
               <table class="table table-bordered">
                 <tr class="info">
-                  <th>周次</th>
-                  <th>星期</th>
-                  <th>节数</th>
-                  <th>教室</th>
-                  <th>班级</th>
-                  <th>成绩</th>
+                  <th>课程名称</th>
+                  <th>课程代码</th>
+                  <th>学期</th>
+                  <th>任课教师</th>
+                  <th>课程类型</th>
+                  <th>上课时间</th>
+                  <th>操作</th>
                 </tr>
                 <tr>
-                  <td>第三周</td>
-                  <td>星期二</td>
-                  <td>第四大节</td>
-                  <td>A210</td>
-                  <td>计1806</td>
-                  <td><a href="" type="button" class="btn btn-default navbar-btn">点击查看</a></td>
+                  <td>商业网站开发</td>
+                  <td>GB12341234</td>
+                  <td>2018-2019春季</td>
+                  <td>潘杰</td>
+                  <td>选修课</td>
+                  <td><a href="http://localhost/microcourse/public/index.php/index/teacher/coursetime" type="button" class="btn btn-default">点击查看</a></td>
+                  <td>
+                    <a class=" btn btn-danger btn-sm" href=""><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
+                    <a class="btn btn-sm btn-primary" href="http://localhost/microcourse/public/index.php/index/teacher/courseedit"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
+                  </td>
                 </tr>
                  <tr>
-                  <td>123</td>
-                  <td>321</td>
+                  <td>123</td>  
                   <td>456</td>
                   <td>654</td>
-                  <td></td>
-                  <td><a href="" type="button" class="btn btn-default navbar-btn">点击查看</a></td>
+                  <td>789</td>
+                  <td>987</td>
+                  <td><a href="http://localhost/microcourse/public/index.php/index/teacher/scoursetime" type="button" class="btn btn-default">点击查看</a></td>
+                  <td>
+                    <a class=" btn btn-danger btn-sm" href=""><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
+                    <a class="btn btn-sm btn-primary" href="http://localhost/microcourse/public/index.php/index/teacher/courseedit"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
+                  </td>
                 </tr>
   
             </table>
@@ -109,7 +137,6 @@
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
         </div>
     </div>
-    
 </body>
 
 </html>
