--- a/application/index/view/student/infoedit.html
+++ b/application/index/view/student/infoedit.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
+<!-- 管理员界面——教师管理编辑 -->
+<!-- limeina1 -->
+<!-- 2019.08.09 20：40 -->
 
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}修改信息-微课堂{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microcourse/public/static/bootstrap.min.css">
+    <title>{block name="title"}教师管理-编辑{/block}</title>
+    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
 
@@ -13,32 +16,52 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <div class="page-header">
-        <h1 class="text-center">修改信息<small>微课堂</small></h1>
-    </div>
-    <div class="input-group input-group-lg">
-        <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp学号&nbsp&nbsp</span>
-        <input class="form-control" type="text" placeholder="182511" readonly>
-    </div>
-    <br><br>
-    <div class="input-group input-group-lg">
-        <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp姓名&nbsp&nbsp</span>
-        <input type="text" class="form-control" placeholder="刘宇轩" aria-describedby="sizing-addon1">
-    </div>
-    <br><br>
-    <div class="input-group input-group-lg ">
-        <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp性别&nbsp&nbsp</span>
-        <input type="text" class="form-control" placeholder="男" aria-describedby="sizing-addon1">
-    </div>
-    <br><br>
-    <div class="input-group input-group-lg ">
-        <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp班级&nbsp&nbsp</span>
-        <input type="text" class="form-control" placeholder="交通181" aria-describedby="sizing-addon1">
-    </div>
-    <br><br>
-    <div class="text-center">
-        <br>
-        <a href="http://localhost/microcourse/public/index.php/index/student/info" class="btn btn-primary"> 提交 </a>
+    <div class="container-fluid">
+        <div class="page-header">
+            <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
+        </div>
+        <form class="form-horizontal" action="{:url('infoupdate')}" method="post">
+            <div class="form-group">
+                <label for="name" class="col-sm-2 control-label">姓名:</label>
+                <div class="col-sm-10">
+                    <input type="hidden" name="id" value="{$Student->getData('id')}" />
+                    <input type="text" class="form-control" id="name" value="{$Student->getData('name')}" name="name" disabled="disabled" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="name" class="col-sm-2 control-label">学号:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="name" value="{$Student->getData('num')}" name="num" disabled="disabled" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="name" class="col-sm-2 control-label">性别:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="name" value="{$Student->sex}" name="num" disabled="disabled" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="name" class="col-sm-2 control-label">密码:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="name" value="{$Student->getData('password')}" name="password" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="name" class="col-sm-2 control-label">班级:</label>
+                <div class="col-sm-10">
+                    <select name="klass_id" class="form-control">
+                        {volist name="klasses" id="klass" key="key"}
+                        <option {eq name="$Student->getKlass()->getData('id')" value="$klass->getData('id')"}selected="selected"{/eq} value="{$klass->getData('id')}">{$klass->getData('name')}</option>
+                        {/volist}
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">保存</button>
+                </div>
+            </div>
+        </form>
     </div>
 </body>
 
