--- a/application/index/view/login/index.html
+++ b/application/index/view/login/index.html
@@ -14,21 +14,23 @@
 	<div class="page-header">
  		<h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
 	</div>
-
-	<div class="input-group input-group-lg">
-	  <span class="input-group-addon" id="sizing-addon1">Username</span>
-	  <input type="text" class="form-control" placeholder="学号\工号" aria-describedby="sizing-addon1">
-	</div>
-	<br><br>	
-	<div class="input-group input-group-lg ">
-	  <span class="input-group-addon" id="sizing-addon1">Password</span>
-	  <input type="text" class="form-control" placeholder="密码" aria-describedby="sizing-addon1">
-	</div>
+    <form action="{:url('login')}" method="post">
+    	<div class="input-group input-group-lg">
+		  <span class="input-group-addon" id="sizing-addon1">Username</span>
+		  <input type="text" class="form-control" placeholder="学号\工号" aria-describedby="sizing-addon1" name="num" />
+		</div>
+		<br><br>	
+		<div class="input-group input-group-lg ">
+		  <span class="input-group-addon" id="sizing-addon1">Password</span>
+		  <input type="text" class="form-control" placeholder="密码" aria-describedby="sizing-addon1" name="password" />
+		</div>
+		
+		<div class="text-center">
+			<br>
+			<button type="submit" class="btn btn-success">登录</button>
+			<a href="http://localhost/microCourse/public/index.php/index/login/register" type="button" class="btn btn-primary"> 注册  </a>
+		</div>
+    </form>
 	
-	<div class="text-center">
-		<br>	
-		<a href="http://localhost/microCourse/public/index.php/index/home/studentpage" type="button" class="btn btn-success"> 登录  </a>
-		<a href="http://localhost/microCourse/public/index.php/index/login/register" type="button" class="btn btn-primary"> 注册  </a>
-	</div>
 </body>
 </html>
