--- a/application/index/view/student/infoedit.html
+++ b/application/index/view/student/infoedit.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}教师管理-编辑{/block}</title>
+    <title>{block name="title"}编辑{/block}</title>
     <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
