--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -1,49 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
+<!-- 管理员界面——教师管理编辑 -->
+<!-- limeina1 -->
+<!-- 2019.08.09 20：40 -->
+
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}注册-微课堂{/block}</title>
-	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <title>{block name="title"}注册{/block}</title>
+    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
+    <!--调用bootstrap的CSS样式 -->
 </head>
+
 <body class="container">
-	<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-
-	<div class="page-header">
- 		<h1 class="text-center">注册<small>微课堂</small></h1>
-	</div>
-
-	<div class="input-group input-group-lg">
-	  <span class="input-group-addon" id="sizing-addon1">Username</span>
-	  <input type="text" class="form-control" placeholder="学号" aria-describedby="sizing-addon1">
-	</div>
-	<br><br>
-	<div class="input-group input-group-lg">
-	  <span class="input-group-addon" id="sizing-addon1">Password</span>
-	  <input type="text" class="form-control" placeholder="密码" aria-describedby="sizing-addon1">
-	</div>
-	<br><br>	
-	<div class="input-group input-group-lg ">
-	  <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp&nbspName&nbsp&nbsp&nbsp</span>
-	  <input type="text" class="form-control" placeholder="姓名" aria-describedby="sizing-addon1">
-	</div>
-	<br><br>	
-	<div class="input-group input-group-lg ">
-	  <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp&nbsp&nbsp&nbspSex&nbsp&nbsp&nbsp&nbsp</span>
-	  <input type="text" class="form-control" placeholder="性别" aria-describedby="sizing-addon1">
-	</div>
-	<br><br>	
-	<div class="input-group input-group-lg ">
-	  <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp&nbspClass&nbsp&nbsp&nbsp</span>
-	  <input type="text" class="form-control" placeholder="班级" aria-describedby="sizing-addon1">
-	</div>
-	
-	<div class="text-center">
-		<br>	
-		<a href="http://localhost/microCourse/public/index.php/index/login/login"  type="button" class="btn btn-primary"> 提交  </a>
-	</div>
+    <div class="container-fluid">
+        <div class="page-header">
+            <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
+        </div>
+        <form class="form-horizontal" action="{:url('save')}" method="post">
+            <div class="form-group">
+                <label for="name" class="col-sm-2 control-label">姓名:</label>
+                <div class="col-sm-10">
+                    
+                    <input type="text" class="form-control" name="name" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">学号:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="num" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">性别:</label>
+                <div class="col-sm-10">
+                    <select name="sex" class="form-control">
+                    	<option value="0">男</option>
+                    	<option value="1">女</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">密码:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="password" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">班级:</label>
+                <div class="col-sm-10">
+                    <select name="klass_id" class="form-control">
+                        {volist name="klasses" id="klass" key="key"}
+                        <option value="{$klass->getData('id')}">{$klass->getData('name')}</option>
+                        {/volist}
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">保存</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
