--- a/application/index/view/student/info.html
+++ b/application/index/view/student/info.html
@@ -38,13 +38,10 @@
                     <!--是这个标签是当前标签 -->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="http://localhost/microcourse/public/index.php/index/student/password">设置</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="http://localhost/microcourse/public/index.php/index/login/login">注销</a></li>
+                            <li><a href="http://localhost/microcourse/public/index.php/index/login/SlogOut">注销</a></li>
                         </ul>
                     </li>
                 </ul>
