--- a/application/index/view/teacher/grade.html
+++ b/application/index/view/teacher/grade.html
@@ -41,9 +41,8 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">你好，敬爱的教师<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">设置</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">注销</a></li>
+
+                  <li><a href="http://localhost/microcourse/public/index.php/index/login/TlogOut">注销</a></li>
                 </ul>
               </li>
             </ul>
