--- a/application/index/view/teacher/page.html
+++ b/application/index/view/teacher/page.html
@@ -93,10 +93,10 @@
                     <th>北辰</th>
                 </tr>
                 <tr>
-                    <td style="vertical-align:middle;" rowspan="2" class="text-center">第一大节</td>
+                    <td style="vertical-align:middle;" rowspan="2" class="text-center" >第一大节</td>
                     <td></td>
                     <td></td>
-                    <td></td>
+                    <td>123</td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -105,7 +105,7 @@
                     <td>第1小节<br>8:30~9:15</td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td bgcolor="red"></td>
                     <td></td>
                     <td></td>
                     <td></td>
