--- a/application/index/view/teacher/onlinehome.html
+++ b/application/index/view/teacher/onlinehome.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -30,18 +30,17 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav ">
-              <li><a href="http://localhost/microCourse/public/index.php/index/teacher/page">首页</a></li>
-              <li><a href="http://localhost/microCourse/public/index.php/index/teacher/course">课程管理</a></li>
-              <li><a href="http://localhost/microCourse/public/index.php/index/teacher/classroom">教室管理</a></li>
-              <li><a href="http://localhost/microCourse/public/index.php/index/teacher/online">上课模式</a></li>
-              <li class="active"><a href="http://localhost/microCourse/public/index.php/index/teacher/grade">成绩录入<span class="sr-only">(current)</span></a></li>
+            	<li><a href="http://localhost/microcourse/public/index.php/index/teacher/page">首页</a></li>
+              <li><a href="http://localhost/microcourse/public/index.php/index/teacher/course">课程管理</a></li>
+              <li><a href="http://localhost/microcourse/public/index.php/index/teacher/classroom">教室管理</a></li>
+              <li class="active"><a href="http://localhost/microcourse/public/index.php/index/teacher/online">上课模式<span class="sr-only">(current)</span></a></li>
               <!--是这个标签是当前标签 -->
+              <li><a href="http://localhost/microcourse/public/index.php/index/teacher/grade">成绩录入</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">你好，敬爱的教师<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-  
                   <li><a href="http://localhost/microcourse/public/index.php/index/login/TlogOut">注销</a></li>
                 </ul>
               </li>
@@ -52,40 +51,18 @@
     <br><br>
     <div class="container">
       <div class="col-md-12">
-            {block name="search"}
             <hr />
-              
-              <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
-              <h3>课程名:{$course->getdata('name')}</h3>
-              <h3>课程编码:{$course->getdata('num')}</h3>
-              <a href="gradeadd?id={$course->getData('id')}" class="btn btn-primary">&nbsp;录入成绩</a>
-              <a href="grade?id={$course->getdata('id')}" class="btn btn-primary">&nbsp;返回</a>
-              <hr />
-              <table class="table table-bordered">
-                <tr class="info">
-                  <th>上课次数</th>
-                  <th>上课周次</th>
-                  <th>上课星期</th>
-                  <th>上课时间</th>
-                  <th>上课教室</th>
-                  <th>出勤详情</th>
-                </tr>
-                {volist name="info" id="info" $key="key"}
-                  <tr>
-                    <td>{$key}</td>
-                    <td>{$info->getdata('week')}</td>
-                    <td>{$info->getdata('weekday')}</td>
-                    <td>{$info->getdata('begin')."~".($info->getdata('begin') + $info->getdata('length') -1)}</td>
-                    <td>{$info->classroom->classroomname}</td>
-                    <td><a href="gradeoncourse?id={$info->getData('id')}" class="btn btn-primary">&nbsp;详情</a></td>
-                  </tr>
-                {/volist}
-            </table>
-              <br><br>
-            <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
+              {eq name='$time[0]' value='0'}   
+              <div class="alert alert-danger" role="alert">激活学期已结束或未开始</div>
+              {else}
+              <div class="alert alert-success" role="alert">{$time[1]}&nbsp&nbsp第{$time[2]}教学周&nbsp&nbsp{$time[3]}&nbsp&nbsp第{$time[4]}大节</div>
+              <h3></h3>
+              {/eq}
+              <a href="setCourse?id={$courseinfo[0]['id']}" class="btn btn-primary">&nbsp;签到</a>
+              <a href="onlinesignin?id={$courseinfo[0]['id']}" class="btn btn-primary">&nbsp;随机提问</a>
+
         </div>
     </div>
-    
 </body>
 
 </html>
