--- a/application/index/view/admin/page.html
+++ b/application/index/view/admin/page.html
@@ -36,7 +36,7 @@
                     <li class="active"><a href="http://localhost/microcourse/public/index.php/index/admin/page">首页<span class="sr-only">(current)</span></a></li>
                     <li><a href="http://localhost/microcourse/public/index.php/index/admin/term">学期控制</a></li>
                     <li><a href="http://localhost/microcourse/public/index.php/index/admin/teacher">教师管理</a></li>
-                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/student">学生管理</a></li>
+                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/klass">班级管理</a></li>
                     <li><a href="http://localhost/microcourse/public/index.php/index/admin/classroom">教室管理</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
