--- a/application/index/view/admin/student.html
+++ b/application/index/view/admin/student.html
@@ -62,19 +62,15 @@
                 <div class="col-md-8">
                     <form class="form-inline">
                         <div class="form-group">
-                            <label class="sr-only" for="name">条件:</label>
-                            <select class="btn btn-default">
-                                <option>姓名</option>
-                                </option>
-                                <option>学号</option>
-                            </select>
-                            <input type="name" class="form-control" placeholder="输入...">
+                            
+                            <input type="name" class="form-control" placeholder="学号...">
                         </div>
                         <button type="submit" class="btn btn-default">&nbsp;查询</button>
                     </form>
                 </div>
                 <div class="col-md-4 text-right">
                     <a class="btn btn-primary" href="http://localhost/microcourse/public/index.php/index/admin/studentadd">&nbsp;增加</a>
+                    <a class="btn btn-primary" href="http://localhost/microcourse/public/index.php/index/admin/klass">&nbsp;返回</a>
                 </div>
             </div>
             <hr />
