--- a/application/index/view/admin/studentadd.html
+++ b/application/index/view/admin/studentadd.html
@@ -42,27 +42,26 @@
                     </select>
                 </div>
             </div>
+            
             <div class="form-group">
-                <label for="academy" class="col-sm-2 control-label">学院:</label>
+                <label class="col-sm-2 control-label">密码:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="academy" placeholder="学院..." />
+                    <input type="text" class="form-control" name="password" placeholder="密码..." />
                 </div>
             </div>
             <div class="form-group">
-                <label for="major" class="col-sm-2 control-label">专业全称:</label>
+                <label class="col-sm-2 control-label">班级:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="major" placeholder="专业全称..." />
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="klass_id" class="col-sm-2 control-label">班号:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" name="klass_id" placeholder="班号..." />
+                    <select name="klass_id" class="form-control">
+                        {volist name="klasses" id="klass" key="key"}
+                        <option value="{$klass->getData('id')}">{$klass->getData('name')}</option>
+                        {/volist}
+                    </select>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">保存</button>
+                    <button type="submit" class="btn btn-default" >保存</button>
                 </div>
             </div>
         </form>
