--- a/application/index/view/admin/studentedit.html
+++ b/application/index/view/admin/studentedit.html
@@ -25,13 +25,13 @@
                 <label for="name" class="col-sm-2 control-label">姓名:</label>
                 <div class="col-sm-10">
                     <input type="hidden" name="id" value="{$Student->getData('id')}" />
-                    <input type="text" class="form-control" name="name" placeholder="姓名..." value="{$Student->getData('name')}" />
+                    <input type="text" class="form-control" name="name" value="{$Student->getData('name')}" />
                 </div>
             </div>
             <div class="form-group">
                 <label for="num" class="col-sm-2 control-label">学号:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="num" placeholder="学号..." value="{$Student->getData('num')}" />
+                    <input type="text" class="form-control" name="num" value="{$Student->getData('num')}" />
                 </div>
             </div>
             <div class="form-group">
@@ -44,21 +44,19 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="academy" class="col-sm-2 control-label">学院:</label>
+                <label for="password" class="col-sm-2 control-label">密码:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="academy" placeholder="学院..." value="{$Student->getData('academy')}" />
+                        <input type="text" class="form-control" name="password"  value="{$Student->getData('password')}" />
                     </div>
             </div>
             <div class="form-group">
-                <label for="major" class="col-sm-2 control-label">专业全称:</label>
+                <label for="klass_id" class="col-sm-2 control-label">班级:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="major" placeholder="班级..." value="{$Student->getData('major')}" />
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="klass_id" class="col-sm-2 control-label">班号:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" name="klass_id" placeholder="班级..." value="{$Student->getData('klass_id')}" />
+                    <select name="klass_id" class="form-control">
+                        {volist name="klasses" id="klass" key="key"}
+                        <option value="{$klass->getData('id')}" {eq name="$klass->getData('id')" value="$Student->getData('klass_id')"}selected="selected"{/eq}>{$klass->getData('name')}</option>
+                        {/volist}
+                    </select>
                 </div>
             </div>
             <div class="form-group">
