--- a/application/index/view/admin/teacher.html
+++ b/application/index/view/admin/teacher.html
@@ -35,7 +35,7 @@
                     <li><a href="http://localhost/microcourse/public/index.php/index/admin/term">学期控制</a></li>
                     <!-- 这个标签是当前标签 -->
                     <li class="active"><a href="http://localhost/microcourse/public/index.php/index/admin/teacher">教师管理<span class="sr-only">(curent)</span></a></li>
-                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/student">学生管理</a></li>
+                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/klass.html">班级管理</a></li>
                     <li><a href="http://localhost/microcourse/public/index.php/index/admin/classroom">教室管理</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
