--- a/application/index/view/admin/term.html
+++ b/application/index/view/admin/term.html
@@ -37,7 +37,7 @@
                     <!-- 这个标签是当前标签 -->
                     <li class="active"><a href="http://localhost/microCourse/public/index.php/index/admin/term">学期控制<span class="sr-only">(current)</span></a></li>
                     <li><a href="http://localhost/microCourse/public/index.php/index/admin/teacher">教师管理</a></li>
-                    <li><a href="http://localhost/microCourse/public/index.php/index/admin/student">学生管理</a></li>
+                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/klass.html">班级管理</a></li>
                     <li><a href="http://localhost/microCourse/public/index.php/index/admin/classroom">教室管理</a></li>
                 </ul>
               </li>
