--- a/application/index/view/login/index.html
+++ b/application/index/view/login/index.html
@@ -22,14 +22,16 @@
 		<br><br>	
 		<div class="input-group input-group-lg ">
 		  <span class="input-group-addon" id="sizing-addon1">Password</span>
-		  <input type="text" class="form-control" placeholder="密码" aria-describedby="sizing-addon1" name="password" />
+		  <input type="password" class="form-control" placeholder="密码" aria-describedby="sizing-addon1" name="password" />
 		</div>
 		
 		<div class="text-center">
 			<br>
 			<button type="submit" class="btn btn-success">登录</button>
-			<a href="http://localhost/microCourse/public/index.php/index/login/register" type="button" class="btn btn-primary"> 注册  </a>
+			<a href="register" type="button" class="btn btn-primary"> 注册  </a>
 		</div>
+
+		
     </form>
 	
 </body>
