--- a/application/index/view/teacher/incourse.html
+++ b/application/index/view/teacher/incourse.html
@@ -140,7 +140,7 @@
             <td></td>
         </tr>    
     </table>
-    <a href="http://localhost/microCourse/public/index.php/index/home/teacherincourse2" class="btn btn-default navbar-btn">完成</a>
+    <a href="/index/home/teacherincourse2" class="btn btn-default navbar-btn">完成</a>
   </div>
 </div>
 </body>
