--- a/application/index/view/teacher/incourse2.html
+++ b/application/index/view/teacher/incourse2.html
@@ -8,8 +8,8 @@
 <body>
   <div class="row">
   <div class="col-md-5">
-    <a href="http://localhost/microCourse/public/index.php/index/home/teacheronline" class="btn btn-default navbar-btn">随机点名</a>
-    <a href="http://localhost/microCourse/public/index.php/index/home/teacheronline" class="btn btn-default navbar-btn">下课</a>
+    <a href="/index/home/teacheronline" class="btn btn-default navbar-btn">随机点名</a>
+    <a href="/index/home/teacheronline" class="btn btn-default navbar-btn">下课</a>
   	<img src="..." alt="..." class="img-rounded">
   </div>
   <div class="col-md-7">
