--- a/application/index/view/admin/aboutourteam.html
+++ b/application/index/view/admin/aboutourteam.html
@@ -5,8 +5,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}微课堂-梦云智出品{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
+    <title>微课堂-梦云智出品</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--调用bootstrap的CSS样式 -->
 </head>
 
@@ -19,15 +19,15 @@
     <br><br>
     <div class="row">
       <div class="col-md-12">
-            {block name="search"}
+            
             <hr />
               <div class="jumbotron">
                   <h1>我是练习时长两年半的个人练习生...</h1>
-                  <a href="http://localhost/microCourse/public/index.php/index/home/studentpage" type="button" class="btn btn-default navbar-btn">返回</a>
+                  <a href="/index/home/studentpage" type="button" class="btn btn-default navbar-btn">返回</a>
               </div>
 
               
-            <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
+            <hr /> 
         </div>
     </div>
 </body>
