--- a/application/index/view/admin/term.html
+++ b/application/index/view/admin/term.html
@@ -1,63 +1,10 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-<!-- 管理员界面——学期控制 -->
-<!-- 刘宇轩 -->
-<!-- 2019.07.19 14:55 -->
-<!-- limeina -->
-<!-- 2019.08.09 09：20 -->
-
-<head>
-    <meta charset="UTF-8">
-    <title>{block name="title"}微课堂-管理员模式{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
-    <!--调用bootstrap的CSS样式 -->
-</head>
-
-<body class="container">
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="http://localhost/microCourse/public/index.php/index/admin/page">微课堂</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav ">
-                    <li><a href="http://localhost/microCourse/public/index.php/index/admin/page">首页</a></li>
-                    <!-- 这个标签是当前标签 -->
-                    <li class="active"><a href="http://localhost/microCourse/public/index.php/index/admin/term">学期控制<span class="sr-only">(current)</span></a></li>
-                    <li><a href="http://localhost/microCourse/public/index.php/index/admin/teacher">教师管理</a></li>
-                    <li><a href="http://localhost/microcourse/public/index.php/index/admin/klass.html">班级管理</a></li>
-                    <li><a href="http://localhost/microCourse/public/index.php/index/admin/classroom">教室管理</a></li>
-                </ul>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">管理员模式<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="http://localhost/microcourse/public/index.php/index/login/AlogOut">注销</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
-    <br>
-    <br>
+{extend name="admin"/}
+{block name="body"}
     <div class="row">
         <div class="col-md-12">
             <hr />
             <!--  表前查询 -->
-            <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
+            <div class="alert {eq name='ifterm' value='1'}alert-success{else /}alert-warning{/eq}" role="alert">激活学期{eq name="ifterm" value="1"}已开始{else /}已结束{/eq}</div>
             <hr />
             <div class="row">
                 <div class="col-md-8">
@@ -104,8 +51,8 @@
                     </tr>
                     {/volist}
                 </table>
+                {$page|raw}
             </div>
         </div>
     </div>
-</body>
-</html>
+{/block}
