--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{block name="title"}注册{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--调用bootstrap的CSS样式 -->
 </head>
 
