--- a/application/index/view/student/coursetime.html
+++ b/application/index/view/student/coursetime.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{block name="title"}微课堂-梦云智出品{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microcourse/public/static/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--调用bootstrap的CSS样式 -->
 </head>
 
@@ -30,21 +30,21 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="http://localhost/microcourse/public/index.php/index/student/page">学生主页</a></li>
-                    <li><a href="http://localhost/microcourse/public/index.php/index/student/online">上课模式</a></li>
-                    <li class="active"><a href="http://localhost/microcourse/public/index.php/index/student/course"> 课程查询<span class="sr-only">(current)</span></a></li>
+                    <li><a href="page">学生主页</a></li>
+                    <li><a href="online">上课模式</a></li>
+                    <li class="active"><a href="course"> 课程查询<span class="sr-only">(current)</span></a></li>
                     <!--是这个标签是当前标签 -->
-                    <li><a href="http://localhost/microcourse/public/index.php/index/student/score">成绩查询</a></li>
-                    <li><a href="http://localhost/microcourse/public/index.php/index/student/info">个人信息</a></li>
+                    <li><a href="score">成绩查询</a></li>
+                    <li><a href="info">个人信息</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Link</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="http://localhost/microcourse/public/index.php/index/student/password">设置</a></li>
+                            <li><a href="password">设置</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="http://localhost/microcourse/public/index.php/index/login/login">注销</a></li>
+                            <li><a href="../login/login">注销</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -121,7 +121,7 @@
                 </tr>
             </table>
             <br><br>
-            <a href="http://localhost/microcourse/public/index.php/index/student/course" type="button" class="btn btn-default navbar-btn">返回</a>
+            <a href="course" type="button" class="btn btn-default navbar-btn">返回</a>
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
         </div>
     </div>
