--- a/application/index/view/student/infoedit.html
+++ b/application/index/view/student/infoedit.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{block name="title"}编辑{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--调用bootstrap的CSS样式 -->
 </head>
 
@@ -29,31 +29,28 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">学号:</label>
+                <label class="col-sm-2 control-label">学号:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" value="{$Student->getData('num')}" name="num" disabled="disabled" />
+                    <input type="text" class="form-control" value="{$Student->getData('num')}" name="num" disabled="disabled" />
+                    
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">性别:</label>
+                <label class="col-sm-2 control-label">性别:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" value="{$Student->sex}" name="num" disabled="disabled" />
+                    <input type="text" class="form-control" value="{$Student->sex}" name="sex" disabled="disabled" />
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">密码:</label>
+                <label for="password" class="col-sm-2 control-label">密码:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" value="{$Student->getData('password')}" name="password" />
+                    <input type="text" class="form-control" id="password" value="{$Student->getData('password')}" name="password" />
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">班级:</label>
+                <label  class="col-sm-2 control-label">班级:</label>
                 <div class="col-sm-10">
-                    <select name="klass_id" class="form-control">
-                        {volist name="klasses" id="klass" key="key"}
-                        <option {eq name="$Student->getKlass()->getData('id')" value="$klass->getData('id')"}selected="selected"{/eq} value="{$klass->getData('id')}">{$klass->getData('name')}</option>
-                        {/volist}
-                    </select>
+                    <input type="text" class="form-control" value="{$Student->klass->name}" name="klass_id" disabled="disabled" />
                 </div>
             </div>
             <div class="form-group">
