--- a/application/index/view/student/score.html
+++ b/application/index/view/student/score.html
@@ -1,58 +1,10 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-<!--刘宇轩-->
-<!--2019.07.19 14:55-->
 
-<head>
-    <meta charset="UTF-8">
-    <title>{block name="title"}微课堂-梦云智出品{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microcourse/public/static/bootstrap.min.css">
-    <!--调用bootstrap的CSS样式 -->
-</head>
-
-<body class="container">
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="http://localhost/microcourse/public/index.php/index/student/page">微课堂</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="http://localhost/microcourse/public/index.php/index/student/page">学生主页</a></li>
-                    <li><a href="http://localhost/microcourse/public/index.php/index/student/online">上课模式</a></li>
-                    <li><a href="http://localhost/microcourse/public/index.php/index/student/course">课程查询</a></li>
-                    <li class="active"><a href="http://localhost/microcourse/public/index.php/index/student/score">成绩查询<span class="sr-only">(current)</span></a></li>
-                    <!--是这个标签是当前标签 -->
-                    <li><a href="http://localhost/microcourse/public/index.php/index/student/info">个人信息</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="http://localhost/microcourse/public/index.php/index/login/SlogOut">注销</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
-    <br><br>
+{extend name="student"/}
+{block name="body"}
     <div class="row">
         <div class="col-md-12">
             <hr />
-            <div class="alert alert-success" role="alert">当前状态：系统运行正常</div>
+            <div class="alert {eq name='ifterm' value='1'}alert-success{else /}alert-warning{/eq}" role="alert">激活学期{eq name="ifterm" value="1"}已开始{else /}已结束{/eq}</div>
             <!-- <h3>当前时间：{:date('Y-m-d H:i:s')}
             </h3> -->
             <h3>当前时间：{:date('Y-m-d')}
@@ -65,7 +17,7 @@
                     <td>
                         <div class="dropdown">
                             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                {$Term->getData('name')}
+                                {$isTerm->getData('name')}
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -99,8 +51,10 @@
                 </tr>
                 {/volist}
             </table>
+            {$scores|raw}
+            
         </div>
     </div>
-</body>
-
-</html>
+    
+{/block}
+    
