--- a/application/index/view/teacher/coursesee.html
+++ b/application/index/view/teacher/coursesee.html
@@ -1,50 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>上课时间</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
-<body class="container">
-     <nav class="navbar navbar-default navbar-fixed-top">
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">微课堂</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav ">
-                    <li><a href="http://localhost/microcourse/public/index.php/index/teacher/page">首页</a></li>
-                  <li class="active"><a href="http://localhost/microcourse/public/index.php/index/teacher/course">课程管理 <span class="sr-only">(current)</span></a></li>
-                  <!--是这个标签是当前标签 -->
-                  <li><a href="http://localhost/microcourse/public/index.php/index/teacher/classroom">教室管理</a></li>
-                  <li><a href="http://localhost/microcourse/public/index.php/index/teacher/online">上课模式</a></li>
-                  <li><a href="http://localhost/microcourse/public/index.php/index/teacher/grade">成绩录入</a></li>
-                  
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">你好，敬爱的教师<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#">设置</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li><a href="#">注销</a></li>
-                    </ul>
-                  </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
-        </nav>
-
-    <br><br>
+{extend name="teacher"/}
+{block name="body"}
 	<div class="page-header">
         <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
     </div>
@@ -548,5 +503,4 @@
                 <td></td>
             </tr>
         </table>
-</body>
-</html>
+{/block}
