--- a/application/index/view/teacher/courseweek.html
+++ b/application/index/view/teacher/courseweek.html
@@ -66,7 +66,7 @@
                 </select>
             </div>
             <div class="col-md-4">
-                <h3>选择座位:&nbsp;</h3>
+                <h3>选择教室:&nbsp;</h3>
                 {volist name="classroom" id="classroom" $key="key"}
                     <label class="radio-inline">
                       <input type="radio" name="classroom_id" value="{$key + 1}" {eq name="classroom->getdata('id')" value="$classroom_id"} checked="checked"{/eq}> {$classroom->getdata('classroomplace') . $classroom->getdata('classroomname')}
