--- a/application/index/view/teacher.html
+++ b/application/index/view/teacher.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <title>{block name="title"}微课堂-管理员模式{/block}</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
@@ -25,16 +26,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">微课堂</a>
+                <a class="navbar-brand">微课堂</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav ">
                     <li {eq name="$isaction" value="page"}class="active"{/eq}><a href="/index/teacher/page">首页 <span class="sr-only">(current)</span></a></li>
                     <!--是这个标签是当前标签 -->
+                    <li {eq name="$isaction" value="online"}class="active"{/eq}><a href="/index/teacher/online">上课模式</a></li>
                     <li {eq name="$isaction" value="course"}class="active"{/eq}><a href="/index/teacher/course">课程管理</a></li>
                     <li {eq name="$isaction" value="classroom"}class="active"{/eq}><a href="/index/teacher/classroom">教室管理</a></li>
-                    <li {eq name="$isaction" value="online"}class="active"{/eq}><a href="/index/teacher/online">上课模式</a></li>
+                    
                     <li {eq name="$isaction" value="grade"}class="active"{/eq}><a href="/index/teacher/grade">成绩录入</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
