--- a/application/index/view/login/index.html
+++ b/application/index/view/login/index.html
@@ -29,7 +29,7 @@
 		<div class="text-center">
 			<br>
 			<button type="submit" class="btn btn-success">登录</button>
-			<a href="register" type="button" class="btn btn-primary"> 注册  </a>
+			<!-- <a href="register" type="button" class="btn btn-primary"> 注册  </a> -->
 		</div>
 
 		
