--- a/application/index/view/admin/student.html
+++ b/application/index/view/admin/student.html
@@ -11,7 +11,7 @@
                     <form class="form-inline">
                         <div class="form-group">
                             
-                            <input type="name" class="form-control" placeholder="学号...">
+                            <input type="text" name="name"  class="form-control" placeholder="学号..." value="{:input('get.name')}">
                         </div>
                         <button type="submit" class="btn btn-default">&nbsp;查询</button>
                     </form>
