--- a/application/index/view/student/infoedit.html
+++ b/application/index/view/student/infoedit.html
@@ -7,6 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{block name="title"}编辑{/block}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--调用bootstrap的CSS样式 -->
 </head>
@@ -20,43 +21,24 @@
         <div class="page-header">
             <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
         </div>
-        <form class="form-horizontal" action="{:url('infoupdate')}" method="post">
-            <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">姓名:</label>
-                <div class="col-sm-10">
-                    <input type="hidden" name="id" value="{$Student->getData('id')}" />
-                    <input type="text" class="form-control" id="name" value="{$Student->getData('name')}" name="name" disabled="disabled" />
-                </div>
+        <form action="{:url('infoupdate')}" method="post">
+            <div class="input-group input-group-lg ">
+
+              <span class="input-group-addon" id="sizing-addon1">原密码</span>
+              <input type="hidden" name="id" value="{$Student->getData('id')}" />
+              <input type="password" class="form-control" placeholder="原密码" aria-describedby="sizing-addon1" name="oldpassword" />
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">学号:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" value="{$Student->getData('num')}" name="num" disabled="disabled" />
-                    
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">性别:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" value="{$Student->sex}" name="sex" disabled="disabled" />
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-2 control-label">密码:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="password" value="{$Student->getData('password')}" name="password" />
-                </div>
-            </div>
-            <div class="form-group">
-                <label  class="col-sm-2 control-label">班级:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" value="{$Student->klass->name}" name="klass_id" disabled="disabled" />
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">保存</button>
-                </div>
+            <br>
+            <br>
+            <div class="input-group input-group-lg ">
+          <span class="input-group-addon" id="sizing-addon1">新密码</span>
+          <input type="password" class="form-control" placeholder="新密码" aria-describedby="sizing-addon1" name="newpassword" />
+        </div>
+        <br>
+            <div class="form-group text-center">
+                    <br>
+                    <button type="submit" class="btn btn-default btn-lg">保存</button>
+                
             </div>
         </form>
     </div>
