--- a/application/index/view/teacher/courseadd.html
+++ b/application/index/view/teacher/courseadd.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>微课堂--梦云智出品</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
