--- a/application/index/view/admin/student.html
+++ b/application/index/view/admin/student.html
@@ -4,14 +4,14 @@
         <div class="col-md-12">
             
             <hr />
-            <div class="alert {eq name='ifterm' value='1'}alert-success{else /}alert-warning{/eq}" role="alert">激活学期{eq name="ifterm" value="1"}已开始{else /}已结束{/eq}</div>
+ø
             <!--  表前查询 -->
             <div class="row">
                 <div class="col-md-8">
                     <form class="form-inline">
                         <div class="form-group">
                             
-                            <input type="text" name="name"  class="form-control" placeholder="学号..." value="{:input('get.name')}">
+                            <input type="name" class="form-control" placeholder="学号...">
                         </div>
                         <button type="submit" class="btn btn-default">&nbsp;查询</button>
                     </form>
