--- a/application/index/view/teacher/onlinehome.html
+++ b/application/index/view/teacher/onlinehome.html
@@ -3,14 +3,9 @@
     <div class="container">
       <div class="col-md-12">
             <hr />
-              {eq name='$time[0]' value='0'}   
-              <div class="alert alert-warning" role="alert">激活学期已结束</div>
-              {else}
-              <div class="alert alert-success" role="alert">{$time[1]}&nbsp&nbsp第{$time[2]}教学周&nbsp&nbsp{$time[3]}&nbsp&nbsp第{$time[4]}大节</div>
               <h3></h3>
-              {/eq}
-              <a href="setCourse?id={$courseinfo[0]['id']}" class="btn btn-primary">&nbsp;签到</a>
-              <a href="onlinesignin?id={$courseinfo[0]['id']}" class="btn btn-primary">&nbsp;随机提问</a>
+              <a href="setCourse?id={$courseinfo['id']}" class="btn btn-success">&nbsp;签到</a>
+              <a href="onlinesignin?id={$courseinfo['id']}" class="btn btn-primary">&nbsp;随机提问</a>
 
         </div>
     </div>
