--- a/application/index/view/teacher/setcourse.html
+++ b/application/index/view/teacher/setcourse.html
@@ -13,16 +13,15 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <script src="/microcourse/public/static/qrcode.js"></script>
+    <script src="/static/qrcode.js"></script>
     
-
-    <script>
+<!--     <script>
       var str = "";
       str += "<table class='table table-bordered'>";
-          for (var i = 0; i < {$classroom[1]} ;i++)
+          for (var i = 0; i < {//$classroom[1]} ;i++)
           {
           str += "<tr>";
-              for(var j = 0; j < {$classroom[2]} ;j++){
+              for(var j = 0; j < {//$classroom[2]} ;j++){
                   str += " <td>" + (i + j) + "</td>";
               }
           str += "</tr>";
@@ -30,7 +29,7 @@
       str += "</table>";
 
     document.write(str);
-    </script>
+    </script> -->
 
     <div id="qrcode" style="width:300px; height:300px; margin-top:15px;"></div>
     <script type="text/javascript">
@@ -39,7 +38,8 @@
     <!-- 问题：直接扫二维码无法解析地址 -->
 
     <a class="btn btn-primary" href="{$url}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>链接跳转</a>
-    {$url}
+    {$url}  <br><br>
+    <a class="btn btn-success" href="/index/teacher/onlinehome?id={$courseinfo->id}" role="button" aria-hidden="true"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>返回</a>
 </body>
 
 </html>
